PWM Monitor fixes